# rules

./: README  Rules.hs  Validation.hs  rules.cabal
src/: Demo.hs
src/Data/Validation/: Rules.hs
