Name:                rules
Version:             0.1
Synopsis:
  A library for structured data validation and extraction

Description:
  Validation of structured data typically entails traversal of a
  structure to produce either a failure value indicating the specific
  failure or a ''validated'' value which can be used for subsequent
  computations. This package provides mechanisms for expressing
  validation rules in such a way that the rules can be used to
  generate documentation about validation requirements, while also
  decoupling the rules from the structure of the validated data.

Category:            Data
Author:              Jonathan Daugherty <jtd@galois.com>
Maintainer:          Jonathan Daugherty <jtd@galois.com>
Build-Type:          Simple
License:             BSD3
License-File:        LICENSE
Cabal-Version:       >= 1.6
Homepage:            http://codevine.org/vty-ui/

Source-Repository head
  type:     git
  location: git://github.com/jtdaugherty/rules.git

Library
  Build-Depends:
    base >= 4 && < 5,
    pretty >= 1.0 && < 1.1

  GHC-Options:       -Wall

  Hs-Source-Dirs:    src
  Exposed-Modules:
      Data.Validation.Rules

Executable rules-demo
  Hs-Source-Dirs:  src
  GHC-Options:     -Wall
  Main-is:         Demo.hs
  Build-Depends:
    base >= 4 && < 5
